--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #F7EBE8;
+  background: #F6F2FF;
 }
-
+ /* background: #F7EBE8; */
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
